--- a/win-project-2/Forms/FDetail1.resx
+++ b/win-project-2/Forms/FDetail1.resx
@@ -117,4 +117,114 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        /9j/4AAQSkZJRgABAQEASABIAAD/2wBDAAYEBQYFBAYGBQYHBwYIChAKCgkJChQODwwQFxQYGBcUFhYa
+        HSUfGhsjHBYWICwgIyYnKSopGR8tMC0oMCUoKSj/2wBDAQcHBwoIChMKChMoGhYaKCgoKCgoKCgoKCgo
+        KCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCj/wgARCAF3AjMDASIAAhEBAxEB/8QA
+        GwABAQEBAQEBAQAAAAAAAAAAAAECAwQFBgf/xAAUAQEAAAAAAAAAAAAAAAAAAAAA/9oADAMBAAIQAxAA
+        AAH+nAAAAAAAAAAAAAiwAAnl9UM9fD0PSsIsJncOHpxwPW59AAAAAACLCLCLCLACAijqAAAAAAAAAAAA
+        BKIABKJw7jx+yeY9bzegSiSjjekOl8uj0OfQAAAAAgICLCLBKIDqAAAAAAAAAAAAABKIACLADHD1Dzdd
+        8jtPIPXPKPVPOO2M6LqaFzDpeMPTfHD2vHo9Ux0JKJKJKIADoAAAAAAAAAAAAAACLAACAAASjOdjlnuP
+        Nn1Dx59w8L3Dw79PMrzQ9LOjF1D03xeo3LBKJKIDoAAAAAAAAAAAAAABKIABLAAACLACLAAACZ2PE9nE
+        rzeknPrD0a8fsIsIsIo259AAAAAAAAAAAAAAACAASiAAASwASiAAAASw5+X3cyTh6DHbnk9iwiwij5v0
+        fm6PppQAAAAAAAAAAAAABLAACAAAAgAIAAAACA889HjPRjcO3Tz+kkogPn8uov0Pkeg+glAAAAAAAAAA
+        AAAEsAAIAAACLABLAAAACAcusPN14dzPs8XsLKID5wHHsNe/5HpPelAAAAAAAAAAAAEsAAEsAAAEsAEs
+        AAAAEsAPJ2czp0wPSADh5fo5Pnt4HDuO3s+N9M7AAAAAAAAAAAAQAAEAAABLABKIAsAAEsAM+b1eQ9Gd
+        YPYlAAJ4vdD5zeCTXI+tfN6QAAAAAAAAAAQAAAgAAAEsAAIAsAAAIB4/Z4z0xTXbzekAJQDHg+l5zygn
+        0vlfSOgAAAAAAAABAAAAQAAAASwAAgAAAAIBw74OXXzeo5ezzdDqDGuejaUA8GPZ4zPo40+hYKgqUAAA
+        AAIAAAAEAAAABLAAQAAAAAgEo8Ps8fsJnfM9bAxrno6a56NAeD38DyZ1g+ncbAAAAAAAAAAAEAAAAACA
+        ASwAAAAAgAOGPR5D1zUOLsMa56Om+ejpcaLKPm49PnPb283oKlAAAAAAAABCwAAAAABAABLAAAAACAAn
+        j9mC3zeoijt5vSPLvI6b56OjOjl4fp/ON+z5/wBAAAqCoKgqCoKgsAAAAAAABAAAgBSAAAAgAIDw+7jk
+        9AOtzS+T18jGuejprns34/XyPB9L5nsPQAAAAAAAAAAAAAABAAASwAAAAASwAAgJ8/6PA7vnD6euejdz
+        Ty63yOmuejprns8PL3eA+nfF7CgAAAAqAAAAAAAQsAAAQAAAAAASwASwAA5ugzrls6a56NeT1cTO+ejp
+        rno6eT06Pl9t+c+jr5frPSzoAAAAAAAAEKgAAAEAAAAAAAIABAAAA8++Ozrrno6saPNrXM6axo6a56On
+        Hpo8PD63M+d27cT0b+bo+i8voNWCoKgqAAAAAAAgAAAAAAASwAAgAAAPDvjs7b47OuuWzpw66PPq4Omu
+        eze+ejozoAc+g8fn+oPB6s8D1uHcAAAAAAILAAAAAAAAEAAEsAAAAPl74dDtvjs7a5aO2uWjqzo5Z9NO
+        G9wazTczok3TnOo463knO5N6xoqCoLAAAAAAAAAAAELAAEAAAAAPib4dDt04bO+uOztvjs675aOuuWjp
+        rno0lAAAAAOfH1DjrPM7JQAAAAAAAAAABAAAQAAAAAPznQN9A3sN7Deg3oNaDVCgAAAAAZDzdA2AAAAA
+        AAAACAAAQAAAAAAP/8QAJBAAAgEDBAIDAQEAAAAAAAAAAQIAAxESICExUBATIjJgMCP/2gAIAQEAAQUC
+        6FsliOHGoi8uyQEEd66b06t/4EFSjhu+emGgZqcBDDUy3gciA370iFLEVJzrxmTCB1PekXmFpmwgdTrI
+        vMbS7iZmewT2LM1mSy47e0KAzAiXqCexp7p7lnuSe1J7ElxotLCYiYz5CewiKwbt7TETAT1iesT1CekT
+        0z1sJ/oJ7GEFRdJEDlYCCO+tCgnrtM2WAhtG6lWyH4AiNTivo+pBuPwLpeAlNCnBvwTC8H+Z8EXlI3Gk
+        NfvWF4hxPj6vpDYspv3tRbhDcRtxTN00MLik8B71vg/ilzpdbyjUg7xxcUz8Zw+p1lKp3vFSPwNxqZZS
+        qd5V80vprZZSqX7t+Kf0lP7eWpwi2hhY0nuO5PFPmcPoIvGXHR9GRrjuRtVj8DcaOY64+TuKRxI7l9n8
+        UvppIuGGJ8PKRuO4r8eKez6mGQ80jZu4qcUt6cbY66q+TsUO3btxR8HikbrrYWMbcUTt25g2reF2qa6o
+        uPFHY9xW2nPhxsrArrYWaDaoO4qC4oH4eMf4VRtDyvHbmL8av8juI3FPjuKwgNx4IKwHXVHybijx3DDa
+        gdDLaA6qo+Mocdy/wfQ4xOuls3c1BcUDddHB01R8uKg7pv8AOpoqDbTVF1fimbjuai3ALqNHB0sLGmcW
+        HdY6amqoLhheUn/DOtowlOpAe+qc6mS0IvAxWLUvL94dxraneFSJjAWWLVgbu3H8SgMNKNTMxtMmEWpe
+        A9ywt/QosajeEOkSreA9wV/s9JWmDpFe/cEAzAziX03mQmQmUymYmYhAaYkQHubCYCYCYiYiWGqwMwny
+        WZBvw7IDPkkDA/h2SBrfhyAZYrB1H//EABQRAQAAAAAAAAAAAAAAAAAAAJD/2gAIAQMBAT8BWD//xAAU
+        EQEAAAAAAAAAAAAAAAAAAACQ/9oACAECAQE/AVg//8QAKBAAAAQEBQUBAQEAAAAAAAAAAAERIQIgMVAQ
+        MFFgYSIyQXGREoGh/9oACAEBAAY/ArCsI50yHcgpX5YWMJG0WQsI50v6G8Iafkdf0NflhYx1l/Q07MHJ
+        RW/dLDqL4K5DGZDwYeEUMVFRUhW89JmQ8GHgHaY8/BX/AAdxDuIVLIaIOXwNf2iMVUPD8GnuZ3IKWwel
+        h1EoaRYQpbCWFjCRNIpBS2Gh0k4PYiH2yIdS2J+T/mJHsXnEpkO/L4xMplKt/wDWBHOpVv3vFZ1hrfVx
+        9ZCw1v5lIweT9FfIiwhleVfGxOJEO9QnzimmUt9MtctL0WBHpkLiR3qIsfWxPePvLS8rpIuxE0y1wK9e
+        9jqQI8eMk72cOkilsMopVKmQd7TyUqbC/X2VdJ1viFKkyBNgLMo52PwFKoe/rPxg+xmYOGYa31cpjDko
+        ZtksNb02doYbqK9MHyaGKHIz3qmHkecKTUDGNdk6lshqhItjuOLT/8QAKxABAAIBAgUEAAcBAQAAAAAA
+        AQARMSFRECBBUGFxgZGhMEBgscHw8eHR/9oACAEBAAE/IewMufRvNIaDK6c9CXP+slyLO+pcctU9SWP/
+        ACH8Dqj6nRngBnvwDEzD9xLw7Oe1Zpumij2QBaE76DFuXwRzSjwxBBas5kuNW2rxD7sJsB2dO+jC3bV4
+        h1r5jG0dnTnHIgv3RN56hKv4Gbg+0/oJ48/2oJgfPd0MzhP5qTfeoSr+BlOpzfDHlHu4cJj54Pj5uFSp
+        SeKOwShiz0ZeY99YdVxlmu3Xu1Sk8EU6R2J447cdslelk6B+88T1E3H6orKwESxs5BZ91usuRZ36oiI6
+        Ratq8SxibkMt2cn7oN4Xzht+gRZU2ehNXK36PJr8ubwiwP6BYBxEcu/aZLOOY83j9BiInqD641Knoocx
+        d9GInQuriOwYeZqXHSUO++sTP4Z4Cwls64eXRuvSVvUJZ3xmg62jxde/5k2H7lujFffduo50cB+G50v/
+        AHS8pg33txD29HAa4qNxztfvDeX6MGzvZopk1g2WdY4jw3V+Aw+8N5U1g33o247HjTg632vIDrpYirLk
+        f5k741p95wNV5rlM1DLXG/JrQy+u9Uz5Jw+U1iod+VAU4ir93ECDhi7NFZ3uhxH7iuYKHEeh4jByd6UZ
+        7awbB4ehF8+m9ekSmnPG6fSGO8G3F7GuHqFxOXQr78fqks7wNw/Zb4G1KEc6OBDlvzgLSXnvGE0+xri9
+        Lp+/gQhyaqZOKt8u8locq4ILMPCzRkxCVguEIQ5Lo4fMJh3ixll2XXBibhCDDkuGzhpfzHfeAsmL0P3y
+        DBhCHEWG8Smp+9FZ7zQdQ1hGYS+Pnd0shDlotvPpRWe83KUX+R6cnjPUlxDgQ4WX2jiLvJng3X05f6gI
+        MIQ4JZUSlNo6HnvVrNV7PIllOJVyhCEOFF94NDvHZ3lxGgcYHiCIJqPJZRmBhCEJqG0GDpK3vZGG0Ici
+        X/CEIQmcywUsn7RWd5ZSEOJ0NkIQhCaYyShZhiXlOZnvRCEI6iMNFHpCEIQl2zKLf+qdHKA95GDBg8BQ
+        HWEGEITJTiNrNYPwd4v1G5C6oW7uMGDBgwWENNGEIQgwgataYlEXep4nhniA5gvWX3QYMGDBgzpfeDCE
+        IQhwyR8T/ocAl5H1QzSzxDgXuQwYMGDB4ZRiDCEIQ5XXMV0r0h5NZ0dEDKA9wGDBgwYMOHX+MHeEIQh+
+        BqdeQn8AZmB1hr24YMGDBgwYMGZEiGVy3AkC9YMIcKbzyT1vif0E/uJuCe0F6zPUu88ElnbRgwYMGDBg
+        wYPFfInq/M8nyn9jPH9zxJXK5giesS8xSGVoyk8nbBgwYMGDBgwYQg/j9Dp3IwMTo9rGDBgwYMGDBgwe
+        B+QN10wiol+dO0jBgwYMGDBgwYMGEPyBtQv3i3aP/9oADAMBAAIAAwAAABDzzzzzzzzzwgADTyhyiSTS
+        zTzzzzyySSTQizDzzzzzzzzzzwgBDzxiyCThizjzzzzyiiiDRjzzzzzzzzzzzywABDzzTygBhRQiDBhD
+        RhhhiwzzzzzzzzzzzzygADTyjzwABzjwxjAyxDRRBjzzzzzzzzzzzzywABDzxTygDTzTzyjAiDCSTTzT
+        zzzzzzzzzzzwgADzzjywBTzjzzwATBiiCTAjTzzzzzzzzzzygABTyjzwADyzzzwgCyxTBjwCDTzzzzzz
+        zzzwAABTzzzygDTxTzygDyyRRgwAATjzzzzzzzzgAABTzxTygBTzzzzwBTzgSwAwhCxDTzzzzziAAABz
+        zxzygBTzjzTwBTyijzzywAQgADDDCAAAAATzzjzygBTyjzTygDwQjTzTzgBAAAAAAAAAATzzyzzygBTy
+        jzzygDzjhDzzzwhCQwgAAAAAzzzzhzzwABTyzzzygDyhCDwQzygBzzzzzzzzzzzhzzzgADzzTzzygDyj
+        jQDCRzyiTjTzzzzzzyRzzzwAATzxTzzyADyjjTDxSBBBzzwwzzzwxzzzziAABzyjzjzwADyizDzQhTiQ
+        TDzzzzzzzzzzAAABzzxTzzzgBTyjzzyTQASgQQADDDADDCAAAARzzyTzzzygBTzTyzwgCiAxgCwgAAAA
+        AAAAQzzzyTzzzzwADzxzzzyzQxzARxwRjCQwwzzzzzzizzzzzyABTyjzzzzwjigDiBDyzzjjzzzzzAxz
+        zzzzyAATzxTzzzxhBQwDQjBgBCxQAwxzzzzzzzzyAARzyTzzzzxiRyiQyzzzzzzzxDzzzzzzzziAABzz
+        hzzzzzyCBzxxzzzzzzzzzzzzzzzzyAAADzzxzzzzzzz/xAAUEQEAAAAAAAAAAAAAAAAAAACQ/9oACAED
+        AQE/EFg//8QAFBEBAAAAAAAAAAAAAAAAAAAAkP/aAAgBAgEBPxBYP//EACkQAQABAgUEAgEFAQAAAAAA
+        AAEAESEQIDFBUTBAcYFhkaFQscHR8OH/2gAIAQEAAT8Q7N6oqUgq7TVafBjh9xP+PnFxYdBhaD/kpzBQ
+        k37BxplcHtnM5zNGAHXBqQTM0h08PD8YsY4INnSKlotTQ+YCgOuNT+zquLHFzU7ZzOVwQS8YiI8CDR/x
+        UhQvMbecXBjxCB0rg1JeOnD+5A7BuNeoxzODg9xTM5XEWiVnNKHd5it94LvW0MgTcamLHABeeV7VJZDP
+        hfqO0BwNX56jixji4U/RmV6pPJaln1FKGfA/Utw+RfmbV2wcGJzBqAz6TCz6hqAeB/ENY/dD+8E+ceUQ
+        bb8wbSbVD4E8X8ZHI5Hv3K5tQJp5Nd4iz6m5D4H8Tbz/AL3IH+Ko/wAz+YoN7zA/iC7HmpNQHpNUHgwo
+        6X8RBqRPBFNSKbPqL1+qVl6/IQ1AOLU0zHKv9MsxvJb6YscGONO5czlcjkRFNiKaibEidkUhG36j/wCq
+        I6/ApgqfDPj/AHhZF8v4GLUZ4FPzKCXINTFl/pRLibRMK/pP7gMS6Ji4v6M9Ry0JRFbQ+4nnRCkKZ6Tf
+        qU7d6mp5lMErrCt3tXQf7eeiCarFjg925nK5HI9JwSE0SsWuA3UQJmiaf6HFI8702BxH6r+COL+jvQcj
+        ncRWJRENVNM1P/EEBBG4m8YlZZdX7NmJSP6K9FyPScqkQlwilnn/AFNSsYCre0d0W+Xc2cGOO8d05nK5
+        HI5HpOCsSsqFu1P2wZR3X9bEvi4G2uuuYYI9y5nK9RzuLiNYsLibMXavQ/PPvAVNyIxcfYRjhSE4aC64
+        Y7W7CQiI9w9N6L0nMKkCBwPxzg6Sp2jQ/s4McaBbC3w4gHRSyMEVO3ewcjkek4kwlYlbvV/xGVusLX4Y
+        5tgzqf5rCJKOlIZqP6M5HI53FxNUTRbP2LmCKGpchnaAxzE0Q/w+YREvpeGCMr+gOvZumdg1kHqAGgKk
+        NUSuHqj/AIwc2gYX/wANYZivpAFSD2T1XXs3OdRpKZdWv1KTi4B9WyV+hxbMRkg2yIB0uX7kIL7QuYD1
+        3oOZ16L1nE1UvPkPvB8a1feWlyvDuSn7loN8jRatc5Qha5K9q9dyPScdLNJs59XwFUnA9QQ9AOVydVqM
+        5CtP4YiHUKMcpXY8koGasrK41lZXpPYORzuLi6ThwAfDbA1RK9TVvXbMyOq1im4ajyYuHyX5IZX7dzPS
+        dcjnc9BHX9iUM0QcFwFB5P8AmI1yGjsLriM4UFkwQRHRjMLK3jaOo7VzuVyuuRzuenniV06lT1aMVL2F
+        8by22mChkrUNy3hzjWPzV/Epb2j1XoudybuNRlKvrTeGMEjuUlVFyv1p+MFFkQREqOpGZ01HkwplrSp5
+        J6NCV7GvQeu53I64iqjptEe+pNsK87FT00wUUWSx2/5MeBiyGhkr06yvaPUcji6Rg9gfUAvUKnhjErWX
+        l8xRMFx2Yoooq42bNxnGep4wVB2JjqehWVlZWV7NyvUcjiwxTkoPxtgKkUnn5iilyKDjTXWx8YWDtRKD
+        4/RHI6dByOLLRHWe29NMaYgoosRR0FIzLUaMtLwGesdtXquV6Dk3xY6Rw1ujyTTTQxXq+BCFRiigwcbX
+        0NfcFZPSsa9jXouZ6rk3xcKWiVq69jX8/vHBBL35jtP9jArEUGKLCpDV19bwVRyUlcnGasrK9Csr03pv
+        YOAqSsEsaebWFEtc2lMeUmpyla8UUUGE60RIzmqpKw7KFz9Geo5HEiUrFRb9VdzZ/jAYQnCqKUgnVaaP
+        JFFFFBlaGhr73nBB/JKC9xXqvRcjkcTVQlV0jfd/ctMiom5Bg4OYf1QkGKKKKWUXdfUakLuvqHcVxr2d
+        e4cj0CUpWUmNsKaRQYM1L6RX9Br4RRRRSwTQ2ZT5Y/Ix1FtVyQKxlrKyvTr03M9F6oqRV0IooMGWaXVH
+        5IoooopSS/lI4Wbn9INZoLIwQVO6rnek5HI51FFFAaYSkDrJUiiiiillrn08TYcam3/UrN4FkYKInfvX
+        cj0wAZsisfMWAooogwirJGfYcfDKatnQa/8AZS1cQMoPuHFTsq9GvTe1AA3dyJTYRoxRRRS5FK0nwbTX
+        mnOpH1DyaPqIaUN9X1FqOjwwuwgU1lZWV6FZWV7ZyuR6wAC6Nz/GViKKKKKKbaS9iPNkTY8D+YssDkvE
+        btxon2cXTdiA2SF+zr2z1gABEjunXecSsRRRRRQcgBQCfJORuVSXIPk2fuK1QdyUAVHhgtk7CvZvZwAK
+        DHF9/wDSXaWPDFFFFFBz3R6m/wBMXVQHgPUNVVBqMQLdKsr2r29QABms87y4keGzFlHPktNKEB3iiJU5
+        iOoPcT1PqOwLwp8WhoipfkoTsawO3YCye43a+Hcgj54ZWVlZWVle4cr2lQAAMH3NVb4nGDwobUFLVXtD
+        kPlMB0+mANAPUrh7cDr31DXT+yN38yXn54yhunITXtXM9z0AAosAYPVuD9ggrvtP5hNUcLvN6OvZ17+q
+        CNDGBigwesq0uLZlXa2+5AoJUtGW569c9e2/06AUAooMHrUmV4dyUSNaIApZh1F6C9n/AP/Z
+</value>
+  </data>
 </root>
