--- a/win-project-2/UserControls/UCListChat.resx
+++ b/win-project-2/UserControls/UCListChat.resx
@@ -117,4 +117,100 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        /9j/4AAQSkZJRgABAQEASABIAAD/2wBDAAYEBQYFBAYGBQYHBwYIChAKCgkJChQODwwQFxQYGBcUFhYa
+        HSUfGhsjHBYWICwgIyYnKSopGR8tMC0oMCUoKSj/2wBDAQcHBwoIChMKChMoGhYaKCgoKCgoKCgoKCgo
+        KCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCj/wgARCAH0AfQDASIAAhEBAxEB/8QA
+        FgABAQEAAAAAAAAAAAAAAAAAAAEC/8QAGAEBAQEBAQAAAAAAAAAAAAAAAAECBQb/2gAMAwEAAhADEAAA
+        Adj0XKLAAAAAAAAACKIoiiKJQihKIoiiKJQiqiolBKEoiiUEolCKKpYoiiKIoiiKIoiiKIoiiKIsCwKI
+        AUgAAAAAAAAAAAAANCAJQSiUIoAlCUEoiiKIoiiKIoiiKIoiiKIoiiKIoiiKIoiiKIoiiqIoiiKIoiiK
+        IoiiKIoiiKIoiiKIoiiKIoiiKIoiiKIoiiKIoiiKIoolAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA0IAAA
+        AAAAAlAAACKIoiiKIoiiKIoiiKIoiiKIoiiKIoiiKK0ly0MtDLQy0MrTK0y1CKqKiKIoiiKIoiqioiqi
+        oiqiiKIoiiKIoiiKIoiiKIorTLLQyojQyojUI1CNQiiKIoiiKIoiiKIoiiKIoiiKIoiiKIoiiKIoiiKI
+        orSXLQy0MtDLQy0MtDLQy0MtQi0ytMtQiiKIqoqIoiqiiKIoioiqiiKIoiiKIoiiKjSoiiKIoiiKIoii
+        KIoiiKIoiiKIogBagAAAAEoAAlBKIoiiKIo0qWKIoiiKIoiiKIoiiKIoiiKIoiiKIoiiKIoiiKIoiiKI
+        oiiKIoiiKNKliiKIoiiKSKIpYoiiKSKIpYpIoiiKIUiwASiUEoihKEoiiKIoiiKIo0tzcqWKSKIoiiKI
+        oilikiiKIoiiKIoiiKIoiiKIoiiKIoiiKIoiiKIoijSpYoiiKIoiiKIoiiKIoiiKIoiiKIoiiKIoiiKI
+        ok0M2wjUItMqIoiiKIo00ly0MtQi0yoiiKIoiiKIoiiKIoiiKIoiiKIoiiKIoiiKIoiiKIoiiKIo0qIo
+        iiKIoiiKIoiiKIoiiKIoiiKIoiiKIoiiKIoiiKIoiiKJNCKIoyo00ly0MtDLQy0MtDLQy0MtDLQy0MtD
+        LQy0MtDLQy0MtDLUIoiiKIoiiKIoiiKIoiiKIo00ly0MtDLQy0MtDLQy0MtDLQytMtQiiKIpIoiiKIoi
+        iKIoiiKIoiiKIoiiKIoijTSXLUI0MtDKiNDKiKIoiiKIoiiTQk0MtDLQy0MtDLQy0MtDLQy0MtDLQy0M
+        tDLQy0MtDLQ0qWKIoiiKIqIqooiiKIozaMtDLQy0MtDLQy0MtDLQy0MtDLQy0MtDLQy0MtDLQy0MtDLQ
+        rTNy0MtDLQy0MtDLQy0MtDLQy0MtDLQy0MtDLQy0MtDLQy0MtDLQy0MtDLQyojQyoi0yoiiKNKlikili
+        iKSKIoiiKWKSKIoiiKIoiiKIoilikiiKIoiiKIoiiKIok0MtDLQ0qWKIoiiKIoiiKIoiiKIozaJNDLQy
+        0MtDLQy0MtDLQy0MtDLQy0MtDLQy0MtDLQy0MtDSpZNDKiLTKiNQiiKIoiiKIoiiKIoiiKIoiiKIoiiK
+        IoiiKIoiiKIoiiKNKiKIoiiKIoiiKIoiiKIoiiKIoiiKIoiiKIoiiKIoy0JNDLQy0MtDLQy0Io0qWKIo
+        iiKIoiiKIoiiKIoiiKIok0MtDLQyoiiKIoiiKIoiiKIoiiKIoijSpYoiiKIoiiKIoiiKSKWKIpIoilii
+        KIoiiKIpIpYpIpYpIoilikiiKIoil0qIoiiFIohSKIsAAJQAiiKIoiiKIoiiKIoiiKIoiiKIoiiKIoii
+        KNKliiKIoiiKIoiiKIoiiKIoiiKIoiiKIoiiKIoiiKIozaJNCKJNDLQy0MtCqiKIoiiKIoiiKIoiiKIo
+        iiKIoiiKIoiiKIoiiKIoiiKIoiiKIoiiKK0ly0MtDLQy0MtDLQy0MtQjQyoiiKI1CKIoiiKIoiiKIoii
+        KIoiiKIoiiKIoiiiAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAP/8QAFBABAAAAAAAAAAAAAAAAAAAAsP/a
+        AAgBAQABBQJ4H//EABQRAQAAAAAAAAAAAAAAAAAAAKD/2gAIAQMBAT8BAB//xAAUEQEAAAAAAAAAAAAA
+        AAAAAACg/9oACAECAQE/AQAf/8QAFBABAAAAAAAAAAAAAAAAAAAAsP/aAAgBAQAGPwJ4H//EABwQAQAC
+        AgMBAAAAAAAAAAAAABEQIACQMEBQoP/aAAgBAQABPyH5/jUCWOiSScxQwwgueWVIKm4A2I//2gAMAwEA
+        AgADAAAAEDxzzzzzzzzz/wD/AP8A7/3/AP8A/v8Af733/wC9+/8AwwwwwwwggwwwAE0AcYcMMsMMuOOM
+        OMMMNNtdt9Ntsd998/8Afv8A3z777/7b77L7LLLHGEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEwwwwwwwww
+        wwwwwwwwwwwwwwwwwwwwwww0000000020003/wD911z79xz73zzzzzz9zyzzz7738/8A/wD777z/AN+9
+        998899998NNNzz/z/wB99/8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wDzyyyyyyyyy267
+        2++8++8888+88888888+DDDDDDDDDDDDDDDDPJNNNNNdNNtd9999NNNNNNNNNNNJNJJFBBBBBBBBBBBB
+        BBBBAAAAABBAAABBABBBBJFNdtd9dd9999997+//AP8A/wD/APv/AP8A/fP/ADzzzzwywwwwwwwwwzyw
+        wgwwgwggggggggggggggkptuvvvvvkABCjjjjjjjjjjjjjnjjjjjjjjjhgiggv8A+/8AvPPPPDHDDDDD
+        DDDDDDDDDDDDTDD/AMccccccccccccMMMMMNPPvPv/8A/wC/++/+wwwwwQwgAAIEMMNNNNNNPNPPPPPP
+        PPPDBFBBNBNNNNNNNdd99999999999911xxwNMNNNONMMMMs808888w00wwwwwwwwwwwyyyyyyyyyyyy
+        yyyyyyyyySiiCOCOKOOO+/8Avv8A88+488MMMMMMMIMMMMMMMMMNPPMwwwwwwwwwwwyxjDzzjjDDDDDD
+        DLDDLLIBDzjzTzzzzzzzzzzzzzzzzzzwwwwwwwz12100000000000EEEAEEEEEDBHDDHDAAEEEEEEEEE
+        EEEEEFDHHzz33zzzzzzzzzzzzzzzzzzz3zz32zyyyww0w0w00w0000wEEEkEkEU02033333333333333
+        33/3/wB9gAAAAAAAAAAAAAAAAAAAAAAAAgQAQwwwpx1RhBhxhRBBBBBBBBBBBBBBBBBBBBBBwwwwwwww
+        kgMsMEMMMMMMMMMMMMMMMMMADjC+DCiDiCDCeCCiCCCCCCCCCCCCCCCC/8QAGxEBAQEBAAMBAAAAAAAA
+        AAAAEQAQIDBAUGD/2gAIAQMBAT8Q7PskREREYYYRhEYYYdn4IiIiIiIiIiIwiIiIiIiIjDs4IiNOCOTg
+        iIiIiIiMIwjCODTgiIiIiIiMIiIiIiIiIiIiMNNI09YiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiMIiI
+        jkiIiIiIiIiIiIiIiIiIiIiI4NMIiIiIiIiIiIiIiIjgw5I0iIiIiIiIiIiI6PaIiIiIiIjyERhphERE
+        RERERERERERERERHBERhEaRERERERERERERGEREREREREREREREREREREfBIiIiIiIiIiIiIiIiIiIiI
+        iIiIjg9YiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiI5MIjCIiIiIiIiIiIiIjxGkdmGEYREe
+        wYcmH2zg/Bf/xAAXEQEBAQEAAAAAAAAAAAAAAAARABBQ/9oACAECAQE/EGZmZmZmZmZmZmZnGZmZmZmZ
+        mZmZmZmZmZmZmZmZnGZmZmZmZmZmZmZmZmZmZmZnWZxmZmZmZnGZmZmZmZmZmZmZmZmZmZmZmZmZmZmZ
+        mZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZ
+        mZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZ
+        mZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZ
+        mZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZ
+        mZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZ
+        mZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZ
+        mZmZmZmZmZmcZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZng//E
+        AB0QAQEBAQADAQEBAAAAAAAAABEAECABITBBUED/2gAIAQEAAT8QIiIiIiIiIiIiIiPkafH30XvPfPu9
+        774IiIw0+B/MIiIiIiIiIjDCIiI5I0jDCMMOjDDDSIjCIiIiIiIiIiIiIiIiIiIiIiIiIiIiIwiIiIiI
+        iIiIiIiIiIiIiIiIiIiIiIiIw4I4MI0w0iOTCIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiMIiIjCIw0
+        iIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiI0jkj/AdmEREYYRGEcERGERERERERERERERERER
+        EREREREREREREREREREREREREREREREREREREREREREREREREREREREREYREacGmGERERERERERERERE
+        RERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERhERERERERER
+        ERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERER
+        ERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERER
+        ERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERER
+        ERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERER
+        ERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERER
+        ERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERER
+        ERERERERERERERERERERERERERERgiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIi
+        IiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIi
+        IiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiLz4iIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIi
+        IiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIi
+        IiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIi
+        IiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIwRERgiIiIiIiIiIwRgjBERE
+        RERERgiOAYIiIjBEREREREREREREeYiIiIiIiIiIiIiMERGDBERgiIiIiIiIiIiIiIiIiIiIiIiIiIiI
+        iIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiI
+        iIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiI
+        iIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiI
+        iIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiI
+        iIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiI
+        iIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiI
+        iIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiPERERERERERERER
+        EREREREREYIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIi
+        IiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIi
+        IiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIjCIiIiIiIiIj3ERERERERERERERERERERERERERERERER
+        ERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERER
+        ERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERER
+        ERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERER
+        EREREREREREacEX78PHw/bxz4/g//9k=
+</value>
+  </data>
 </root>
